
	* src/gramps_main.py: Remov unused module.
	* src/DateDisplay.py (verify_format): Correct check.
	* src/Date.py (is_regular): Add method to detect exact single
	non-empty dates; (set): Add text string as an optional argument.
	* src/DateEdit.py: Use DateHandler instead of low-level DateDisplay;
	(check): Display yellow LED for anything other than regular dates.

2004-09-19 Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/Date.py (is_equal): Add method -- needed to compare dates
	for being identical, since __cmp__ only compares the sorting value
	and ignores the modifiers.
	* src/RelLib.py (Event.are_equal, LdsOrd.are_equal): 
	Use is_equal() method to compare dates.
	* src/AddrEdit.py: Use is_equal() method to compare dates.
	* src/EventEdit.py: Use is_equal() method to compare dates.
	* src/gramps.glade (date_edit): Re-order widgets, add hot keys;
	(event_edit, addr_edit): Remove button relief as in editPerson.

2004-09-19  Don Allingham  <dallingham@users.sourceforge.net>
	* src/Date.py: remove comment field
	* src/DateParser.py: add parsing of Month Day1-Day2, Year
	* src/RelLib.py: make date parsers/displayers global to resolve
	pickle-ing problem
	* src/EditPerson.py: update lists before committing to database
	* src/gramps.glade: remove button border for date editor button
	* src/DateDisplay.py: fix quality prefix display

2004-09-19 Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/DateEdit.py: Take date object as an argument and work with it.
	* src/AddrEdit.py: Use date object instead of text.
	* src/EditPerson.py: Use date object instead of text.
	* src/EventEdit.py: Use date object instead of text.
	* src/gramps.glade: Minor cleanup.
	* src/Date.py (copy): Add method.
	* src/RelLib.py (Address): Correct the use of dates.

2004-09-18  Don Allingham  <dallingham@users.sourceforge.net>
	* src/GrampsInMemDB.py: new base class for in memory databases, such
	as XML or GEDCOM
	* src/GrampGEDDB.py: use new GrampsInMemDB base class